Prevent overly-wide thumbnails on smaller screens

--- a/lab_members/static/lab_members/app.css
+++ b/lab_members/static/lab_members/app.css
@@ -1,3 +1,10 @@
+.thumbnail {
+  max-width: 310px;
+}
+.thumbnail {
+  margin-left: auto;
+  margin-right: auto;
+}
 .thumbnail a:hover {
   text-decoration: none;
 }
